cs/networking/cs-subnet.tf
# Subnets for Keycloak svc
resource "aws_subnet" "cs_subnet_a" {
  vpc_id                  = var.vpc_id
  availability_zone       = "${data.aws_region.current.region}a"
  cidr_block              = "10.0.13.0/25"
  map_public_ip_on_launch = false

  tags = {
    Name        = "cs_subnet"
    SBO_Billing = "common"
  }
}

resource "aws_subnet" "cs_subnet_b" {
  vpc_id                  = var.vpc_id
  availability_zone       = "${data.aws_region.current.region}b"
  cidr_block              = "10.0.13.128/25"
  map_public_ip_on_launch = false

  tags = {
    Name        = "cs_subnet"
    SBO_Billing = "common"
  }
}

resource "aws_subnet" "cs_jupyterhub_subnet" {
  vpc_id                  = var.vpc_id
  availability_zone       = "${data.aws_region.current.region}a"
  cidr_block              = "10.0.20.0/28"
  map_public_ip_on_launch = false

  tags = {
    Name        = "cs_subnet"
    SBO_Billing = "common"
  }
}

resource "aws_subnet" "cs_secret_sharing_svc_subnet" {
  vpc_id                  = var.vpc_id
  availability_zone       = "${data.aws_region.current.region}a"
  cidr_block              = "10.0.20.16/28"
  map_public_ip_on_launch = false

  tags = {
    Name        = "cs_subnet"
    SBO_Billing = "common"
  }
}

# Link VPC route private table to cs_subnet a network
resource "aws_route_table_association" "cs_subnet_a" {
  subnet_id      = aws_subnet.cs_subnet_a.id
  route_table_id = var.route_table_private_subnets_id
}

# Link VPC route private table to cs_subnet b network
resource "aws_route_table_association" "cs_subnet_b" {
  subnet_id      = aws_subnet.cs_subnet_b.id
  route_table_id = var.route_table_private_subnets_id
}

resource "aws_route_table_association" "cs_jupyterhub_subnet" {
  subnet_id      = aws_subnet.cs_jupyterhub_subnet.id
  route_table_id = var.route_table_private_subnets_id
}

resource "aws_route_table_association" "cs_secret_sharing_svc_subnet" {
  subnet_id      = aws_subnet.cs_secret_sharing_svc_subnet.id
  route_table_id = var.route_table_private_subnets_id
}
